--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Build Check
+        run: |
+          cd src
+          dotnet build --configuration Release --no-build .
+      
+      - name: Generate coverage report
+        run: dotnet test --filter TestCategory=Unit --logger "coverage" --verbosity normal --no-build
+        
+      - name: Upload SonarQube analysis
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: sqa_b632c864822aeae6d1e1c5f000363596eeb65460
+          SONAR_HOST_URL: http://54.161.116.110:9000 # Replace with your SonarQube server URL
+          SONAR_PROJECT_KEY: gestao-pedidos-pedido # Replace with your project key
+          SONAR_ORGANIZATION_KEY: fiap
+          SONAR_QUALITY_PROFILE: 'default'
+              
       - name: Checkout repository
         uses: actions/checkout@v2
 
