--- a/src/GestaoPedidos.Web/appsettings.json
+++ b/src/GestaoPedidos.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "appSettings": {
-    "databaseConnection": "Host=gestao-pedidos-db-service:5432;Database=postgres;User Id=postgres;Password=docker;Port=5432"
+    "databaseConnection": "Host=gestao-pedidos-db:5432;Database=gestao-pedidos-db;User Id=admin;Password=fiap;Port=5432"
   }
 }
