--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Build Check
         run:
-          dotnet build
+          dotnet build .
       
       - name: Generate coverage report
         run: |
