--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,11 @@ jobs:
           SONAR_PROJECT_KEY: gestao-pedidos-pedido # Replace with your project key
           SONAR_ORGANIZATION_KEY: fiap
           SONAR_QUALITY_PROFILE: 'default'
+        with:
+          args: >
+            -Dsonar.verbose=true
+            -Dsonar.projectKey=gestao-pedidos-pedido
+        
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
