--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,12 +20,10 @@ jobs:
       
       - name: Generate coverage report
         run:
-          dotnet test --filter TestCategory=Unit --logger "coverage" --verbosity normal --no-build
+          dotnet test --collect "Code Coverage" --filter TestCategory=Unit --logger "coverage" --verbosity normal --no-build
         
       - name: Upload SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@master
-        run:
-          dotnet test --collect "Code Coverage"
         env:
           SONAR_TOKEN: sqa_b632c864822aeae6d1e1c5f000363596eeb65460
           SONAR_HOST_URL: http://54.161.116.110:9000 # Replace with your SonarQube server URL
