--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: List1
+        run: ls -la
         
       - name: Build Check
         run: | 
@@ -21,6 +24,9 @@ jobs:
       - name: Generate coverage report
         run:
           dotnet test --collect "Code Coverage" --filter TestCategory=Unit --logger "coverage" --verbosity normal --no-build
+
+      - name: List2
+        run: ls -la
 
       - name: Upload SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@master
