--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: List1
-        run: ls -la
-        
       - name: Build Check
         run: | 
           cd src
@@ -26,7 +23,7 @@ jobs:
           dotnet test --collect "Code Coverage" --filter TestCategory=Unit --logger "coverage" --verbosity normal --no-build
 
       - name: List2
-        run: ls -la
+        run: ls -la ./src/GestaoPedidos.Test 
 
       - name: Upload SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@master
