--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,12 +18,9 @@ jobs:
           cd src
           dotnet build .
       
-      - name: Generate coverage report
+      - name: Run Tests
         run:
-          dotnet test --collect "Code Coverage" --filter TestCategory=Unit --logger "coverage" --verbosity normal --no-build
-
-      - name: List2
-        run: ls -la ./src/GestaoPedidos.Test 
+          dotnet test 
 
       - name: Upload SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@master
@@ -36,7 +33,7 @@ jobs:
         with:
           args: >
             -Dsonar.projectKey=gestao-pedidos-pedido
-            -Dsonar.cs.opencover.reportsPaths=src/GestaoPedidos.Test/TestResults/*/*.coverage
+            -Dsonar.cs.opencover.reportsPaths=src/**/*.coverage
             -Dsonar.tests=src/GestaoPedidos.Test
         
 
