--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,9 +18,10 @@ jobs:
           cd src
           dotnet build .
       
-      - name: Run Tests
-        run:
-          dotnet test 
+      - name: Generate Coverage Xml
+        run: |
+          dotnet tool install --global coverlet.console \
+          coverlet ./src/GestaoPedidos.Test/bin/Debug/net8.0/GestaoPedidos.Test.dll --target "dotnet"  --targetargs "test"    -o="./src/GestaoPedidos.Test/TestResults/coverage.xml"
 
       - name: Upload SonarQube analysis
         uses: sonarsource/sonarqube-scan-action@master
@@ -33,8 +34,8 @@ jobs:
         with:
           args: >
             -Dsonar.projectKey=gestao-pedidos-pedido
-            -Dsonar.cs.opencover.reportsPaths=src/**/*.coverage
-            -Dsonar.tests=src/GestaoPedidos.Test
+            -Dsonar.cs.opencover.reportsPaths=./src/**/coverage.xml
+            -Dsonar.tests=./src/GestaoPedidos.Test
             -Dsonar.verbose=true
         
 
