--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           args: >
             -Dsonar.projectKey=gestao-pedidos-pedido
-            -Dsonar.cs.opencover.reportsPaths=./src/**/coverage.opencover.xml
+            -Dsonar.cs.opencover.reportsPaths=./src/GestaoPedidos.Test/coverage.opencover.xml
             -Dsonar.tests=./src/GestaoPedidos.Test
             -Dsonar.verbose=true
             
