--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
           dotnet tool install --global dotnet-sonarscanner
           dotnet sonarscanner begin
             /o:fiap 
-            /k:gestao-pedidos-pedido 
+            /d:sonar.projectKey=gestao-pedidos-pedido 
             /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460
             /d:sonar.verbose=true
             /d:sonar.dotnet.excludeTestProjects=true
@@ -42,7 +42,7 @@ jobs:
 
       - name: Sonarqube End
         run: |
-          run: dotnet sonarscanner end /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460
+          run: dotnet sonarscanner end /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460 /d:sonar.projectKey=gestao-pedidos-pedido
           
 #      - name: Upload SonarQube analysis
 #        uses: sonarsource/sonarqube-scan-action@master
