--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,13 +24,7 @@ jobs:
       - name: Sonarqube Begin
         run: |
           dotnet tool install --global dotnet-sonarscanner
-          dotnet sonarscanner begin
-            /o:fiap 
-            /d:sonar.projectKey=gestao-pedidos-pedido 
-            /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460
-            /d:sonar.verbose=true
-            /d:sonar.dotnet.excludeTestProjects=true
-            /d:sonar.host.url=http://54.161.116.110:9000
+          dotnet sonarscanner begin /o:fiap /d:sonar.projectKey=gestao-pedidos-pedido /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460 /d:sonar.verbose=true /d:sonar.dotnet.excludeTestProjects=true /d:sonar.host.url=http://54.161.116.110:9000
       
       - name: Dotnet Build
         run: |
