--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Sonarqube End
         run: |
-          run: dotnet sonarscanner end /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460 /d:sonar.projectKey=gestao-pedidos-pedido
+          run: dotnet sonarscanner end /o:fiap /k:gestao-pedidos-pedido /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460
           
 #      - name: Upload SonarQube analysis
 #        uses: sonarsource/sonarqube-scan-action@master
