--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: List
         run:
-          ls -la ./src/GestaoPeddos.Test/
+          ls -la ./src/GestaoPedidos.Test/
 
       - name: Sonarqube End
         run: |
