--- a/src/GestaoPedidos.Web/GestaoPedidos.Web.csproj
+++ b/src/GestaoPedidos.Web/GestaoPedidos.Web.csproj
@@ -9,6 +9,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <DocumentationFile>bin\Debug\net8.0\GestaoPedidos.xml</DocumentationFile>
+    <SonarQubeExclude>true</SonarQubeExclude>
   </PropertyGroup>
 
   <ItemGroup>
