--- a/src/GestaoPedidos.Application/GestaoPedidos.Application.csproj
+++ b/src/GestaoPedidos.Application/GestaoPedidos.Application.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ItemGroup>
+      <SonarQubeSetting Include="sonar.coverage.exclusions">
+        <Value>**/DTOs/*.cs</Value>
+        <Value>**/Mappings/*.cs</Value>
+      </SonarQubeSetting>
+    </ItemGroup>
   </PropertyGroup>
 
   <ItemGroup>
