--- a/src/GestaoPedidos.Web/appsettings.json
+++ b/src/GestaoPedidos.Web/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "appSettings": {
     "databaseConnection": "Host=gestao-pedidos-db:5432;Database=gestao-pedidos-db;User Id=admin;Password=fiap;Port=5432"
-  }
+  },
+  "AWSRegion": "us-east-1"
 }
