--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,26 +15,26 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Sonarqube Begin
-        run: |
-          dotnet tool install --global dotnet-sonarscanner --version 5.14.0
-            dotnet sonarscanner begin /d:sonar.cs.opencover.reportsPaths=./src/GestaoPedidos.Test/coverage.opencover.xml /d:sonar.cs.vscoveragexml.reportsPaths=./src/GestaoPedidos.Test/coverage.opencover.xml /o:fiap /k:gestao-pedidos-pedido /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460 /d:sonar.verbose=true /d:sonar.dotnet.excludeTestProjects=true /d:sonar.host.url=http://54.161.116.110:9000
-      
+#      - name: Sonarqube Begin
+#        run: |
+#          dotnet tool install --global dotnet-sonarscanner --version 5.14.0
+#            dotnet sonarscanner begin /d:sonar.cs.opencover.reportsPaths=./src/GestaoPedidos.Test/coverage.opencover.xml /d:sonar.cs.vscoveragexml.reportsPaths=./src/GestaoPedidos.Test/coverage.opencover.xml /o:fiap /k:gestao-pedidos-pedido /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460 /d:sonar.verbose=true /d:sonar.dotnet.excludeTestProjects=true /d:sonar.host.url=http://54.161.116.110:9000
+#      
       - name: Dotnet Build
         run: |
           dotnet build .
       
-      - name: Generate Test Coverage
-        run: |
-          dotnet test --no-build --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+#      - name: Generate Test Coverage
+#        run: |
+#          dotnet test --no-build --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
 
       - name: List
         run:
           ls -la ./src/GestaoPedidos.Test/
 
-      - name: Sonarqube End
-        run: |
-          dotnet sonarscanner end /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460
+#      - name: Sonarqube End
+#        run: |
+#          dotnet sonarscanner end /d:sonar.login=sqa_b632c864822aeae6d1e1c5f000363596eeb65460
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
